--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "bulma": "^0.5.1",
         "vue": "^2.1.10",
         "vue-breadcrumbs": "^1.1.2",
+        "vue-meta": "^1.1.0",
         "vue-router": "^2.7.0"
     }
 }
