--- a/package.json
+++ b/package.json
@@ -15,20 +15,21 @@
         "cross-env": "^5.0.5",
         "eslint": "^4.5.0",
         "eslint-config-airbnb": "^15.1.0",
+        "eslint-config-vue": "^2.0.2",
         "eslint-friendly-formatter": "^3.0.0",
         "eslint-loader": "^1.9.0",
         "eslint-plugin-html": "^3.2.0",
         "eslint-plugin-import": "^2.7.0",
         "eslint-plugin-jsx-a11y": "^6.0.2",
         "eslint-plugin-react": "^7.3.0",
-        "eslint-plugin-vue": "^2.1.0",
-        "laravel-mix": "^1.4.2"
+        "eslint-plugin-vue": "^2.1.0"
     },
     "dependencies": {
         "axios": "^0.16.2",
         "bulma": "^0.5.1",
+        "laravel-mix": "^1.4.2",
         "vue": "^2.1.10",
-        "vue-breadcrumbs": "^1.1.2",
+        "vue-bulma-breadcrumb": "https://github.com/ogre0/breadcrumb.git",
         "vue-meta": "^1.1.0",
         "vue-router": "^2.7.0"
     }
